[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/bosses/sprite_swarm3.png" type="Texture" id=1]
[ext_resource path="res://assets/bosses/sprite_swarm2.png" type="Texture" id=2]
[ext_resource path="res://assets/bosses/sprite_swarm0.png" type="Texture" id=3]
[ext_resource path="res://assets/bosses/sprite_swarm1.png" type="Texture" id=4]
[ext_resource path="res://physics/HitEffect.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemies/bosses/Swarm.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 16.1245

[node name="Swarm" type="Area2D" groups=["enemies"]]
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 21, -14 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -25, -16 )
shape = SubResource( 2 )

[node name="HitEffect" parent="." instance=ExtResource( 5 )]

[node name="SpawnPoint1" type="Position2D" parent="."]
position = Vector2( 16, -45 )

[node name="SpawnPoint2" type="Position2D" parent="."]
position = Vector2( -18, -44 )
